Started working with the event-form. WIP

--- a/src/data-list/data-list.css
+++ b/src/data-list/data-list.css
@@ -1,15 +1,22 @@
-.App {
-  text-align: center;
-}
 
-.App-header {
+.data-list {
   background-color: whitesmoke;
   min-height: 100vh;
   /* font-size: calc(10px + 2vmin); */
   color: 333333;
+  width: 30%;
 }
 
-.App-link {
-  color: #61dafb;
+.data-list-info {
+  width: 100%;
+  max-width: 360px;
+  background-color: var(--mui-background-paper); /* Это можно оставить как есть, если используете Material-UI, или заменить на стандартный цвет */
+  position: relative;
+  overflow: auto;
+  max-height: 300px;
+}
+
+.data-list-info ul {
+  padding: 0;
 }
 
