--- a/src/event-form/event-form.css
+++ b/src/event-form/event-form.css
@@ -1,38 +1,26 @@
-/* .App {
+:root {
+  --light-background: #fff;
+  --dark-background: #1A2027;
+  --light-color: #000;
+  --dark-color: #fff;
+}
+
+.event-item {
+  text-align: center;
+  display: flex;
+}
+
+.light-theme {
+  background-color: var(--light-background);
+}
+
+.dark-theme {
+  background-color: var(--dark-background);
+  color: var(--dark-color);
+}
+
+.event-form{
+  width: 90%;
+  color: var(--light-color);
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-} */
